// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer changes the footer link colors based on isLight prop 1`] = `
<DocumentFragment>
  @media (min-width: 768px) {
  .emotion-0 {
    height: 100%;
  }
}

.emotion-2 {
  padding: 5rem 0 1rem;
  text-align: center;
  width: 100%;
}

.emotion-6 {
  list-style: none;
  margin: 0 0 1rem;
  padding: 0;
}

.emotion-8 {
  display: inline-block;
  padding: 0 1rem;
}

.emotion-10 {
  color: currentColor;
  -webkit-transition: color 400ms ease-in;
  transition: color 400ms ease-in;
}

<div
    class="emotion-0 emotion-1"
  >
    <div />
    <footer
      class="emotion-2 emotion-3"
    >
      <nav
        class="emotion-4 emotion-5"
      >
        <ul
          class="emotion-6 emotion-7"
        >
          <li
            class="emotion-8 emotion-9"
          >
            <a
              class="emotion-10 emotion-11"
              href="/"
              style="color: rgb(52, 51, 52);"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-8 emotion-9"
          >
            <a
              class="emotion-10 emotion-11"
              href="/palette"
              style="color: rgb(52, 51, 52);"
            >
              Palette
            </a>
          </li>
          <li
            class="emotion-8 emotion-9"
          >
            <a
              class="emotion-10 emotion-11"
              href="/api-page"
              style="color: rgb(52, 51, 52);"
            >
              API
            </a>
          </li>
          <li
            class="emotion-8 emotion-9"
          >
            <a
              class="emotion-10 emotion-11"
              href="/about"
              style="color: rgb(52, 51, 52);"
            >
              About
            </a>
          </li>
        </ul>
      </nav>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`AppContainer renders without crashing 1`] = `
<DocumentFragment>
  @media (min-width: 768px) {
  .emotion-0 {
    height: 100%;
  }
}

.emotion-2 {
  padding: 5rem 0 1rem;
  text-align: center;
  width: 100%;
}

.emotion-6 {
  list-style: none;
  margin: 0 0 1rem;
  padding: 0;
}

.emotion-8 {
  display: inline-block;
  padding: 0 1rem;
}

.emotion-10 {
  color: currentColor;
  -webkit-transition: color 400ms ease-in;
  transition: color 400ms ease-in;
}

<div
    class="emotion-0 emotion-1"
  >
    <div />
    <footer
      class="emotion-2 emotion-3"
    >
      <nav
        class="emotion-4 emotion-5"
      >
        <ul
          class="emotion-6 emotion-7"
        >
          <li
            class="emotion-8 emotion-9"
          >
            <a
              class="emotion-10 emotion-11"
              href="/"
              style="color: rgb(255, 255, 255);"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-8 emotion-9"
          >
            <a
              class="emotion-10 emotion-11"
              href="/palette"
              style="color: rgb(255, 255, 255);"
            >
              Palette
            </a>
          </li>
          <li
            class="emotion-8 emotion-9"
          >
            <a
              class="emotion-10 emotion-11"
              href="/api-page"
              style="color: rgb(255, 255, 255);"
            >
              API
            </a>
          </li>
          <li
            class="emotion-8 emotion-9"
          >
            <a
              class="emotion-10 emotion-11"
              href="/about"
              style="color: rgb(255, 255, 255);"
            >
              About
            </a>
          </li>
        </ul>
      </nav>
    </footer>
  </div>
</DocumentFragment>
`;
